Upgrade gradle + java 15